HSEARCH-3047 Map URI and URL to String type at mapping stage